# simple-integer-calculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  scanner.cpp  scanner.h  stack.h  token.cpp  token.h
